so many bugs with logging in. squash 1, 12 appear

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -325,3 +325,8 @@ div.user img {
    margin: 0 auto;
    border: 2px solid white;
 }
+
+p.flash-notices {
+   position: relative;
+   top: -30px;
+}
